<resources>
    <string name="app_name">NopStation-Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">+ ADD TO CART</string>
    <string name="product_image">product image</string>
    <string name="product_name">Product Name</string>
    <string name="product_price_placeholder">$15.00</string>
    <string name="navbar_logo">navbar logo</string>
    <string name="checkout_button">checkout button</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="best_selling">BEST SELLING</string>
    <string name="our_category">OUR CATEGORY</string>
    <string name="featured_products">FEATURED PRODUCTS</string>
    <string name="womens_heel">WOMENS HEEL</string>
    <string name="salmon_fish">SALMON FISH</string>
    <string name="furniture_collection">FURNITURE COLLECTION</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="more">More</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="new_customer">New Customer?</string>
    <string name="forget_password">Forget Password</string>
    <string name="food">Food</string>
    <string name="category_description_goes_here">Category description goes here</string>
    <string name="supporting_text">Other Supporting text goes here</string>
    <string name="check_more">Check More</string>
    <string name="category">Category</string>
    <string name="product_details">Ladies Emporium</string>
    <string name="buy_now">BUY NOW!</string>
    <string name="product_subtitle">product subtitle</string>
    <string name="product_subtitle2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="product_discounted_price">$349.0</string>
    <string name="product_actual_price">$699.0</string>
    <string name="product_stock">Availability: </string>
    <string name="product_stock_state">In stock</string>
    <string name="quantity">Quantity: </string>
    <string name="quantity_plus">+</string>
    <string name="quantity_minus">-</string>
    <string name="minus">--</string>
    <string name="product_description_tag">Description</string>
    <string name="product_description">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. "</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="products">PRODUCTS</string>
    <string name="cart_items">5 ITEM(S)</string>
    <string name="subtotal">Sub-Total</string>
    <string name="Shipping">Shipping</string>
    <string name="total">Total:</string>
    <string name="subtotal_amount">$550.02</string>
    <string name="shipping_amount">$5.00</string>
    <string name="total_amount">$555.02</string>
    <string name="place_order">PROCEED TO CHECKOUT</string>
    <string name="cancle_order">cancle order</string>
    <string name="shopping_cart_2">Shopping Cart</string>
    <string name="logout">LOGOUT</string>
    <string name="logged_in_user">LOGGED IN USER</string>
    <string name="loading">Please wait...</string>
    <string name="search_function_is_coming_soon">Search Function is Coming soon</string>
    <string name="orders">Orders</string>
</resources>