<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/homepageFragment"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            android:enabled="true"/>
        <item
            android:id="@+id/categoryFragment"
            android:title="@string/categories"
            android:icon="@drawable/ic_category"
            android:enabled="true"/>
        <item
            android:id="@+id/search"
            android:title="@string/search"
            android:icon="@drawable/ic_search"
            android:enabled="true"/>
        <item
            android:id="@+id/loginFragment"
            android:title="@string/account"
            android:icon="@drawable/ic_account"
            android:enabled="true"/>
        <item
            android:id="@+id/more"
            android:title="@string/more"
            android:icon="@drawable/ic_more"
            android:enabled="true"/>
</menu>