<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">

    <ImageView
        android:id="@+id/iv_product_image2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/main"
        app:layout_constraintStart_toStartOf="@+id/main"
        app:layout_constraintTop_toTopOf="@id/main"
        android:background="@color/cyan"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />

    <TextView
        android:id="@+id/tv_product_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/product_name"
        android:background="@color/shimmercolor"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/tv_product_subtitle2"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical2"
        app:layout_constraintStart_toEndOf="@id/gl_vertical"
        app:layout_constraintTop_toBottomOf="@id/image_guideline"
        app:layout_constraintHorizontal_bias="0"
        tools:text="@string/product_name" />

    <TextView
        android:id="@+id/tv_product_subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/product_subtitle"
        android:background="@color/shimmercolor"
        android:fontFamily="@font/lato"
        tools:text="@string/product_subtitle2"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical2"
        app:layout_constraintStart_toEndOf="@id/gl_vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_name2" />

    <TextView
        android:id="@+id/tv_product_discounted_price2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="@string/product_discounted_price"
        android:background="@color/shimmercolor"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/product_price"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_product_subtitle2"
        app:layout_constraintStart_toEndOf="@id/gl_vertical"/>

    <TextView
        android:id="@+id/tv_product_actual_price2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/lato_bold"
        tools:text="@string/product_actual_price"
        android:background="@color/shimmercolor"
        android:textColor="@color/actual_price"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_product_discounted_price2"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical2"
        app:layout_constraintStart_toEndOf="@id/tv_product_discounted_price2"
        app:layout_constraintTop_toTopOf="@id/tv_product_discounted_price2" />

    <TextView
        android:id="@+id/tv_product_stock2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato"
        tools:text="@string/product_stock"
        android:background="@color/shimmercolor"
        android:textColor="@color/available_color"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/gl_vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_product_discounted_price2" />

    <TextView
        android:id="@+id/stock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:fontFamily="@font/lato"
        android:text="@string/product_stock_state"
        android:background="@color/activecolor"
        android:textColor="@color/product_price"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_product_stock2"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical2"
        app:layout_constraintStart_toEndOf="@id/tv_product_stock2"
        app:layout_constraintTop_toTopOf="@id/tv_product_stock2" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical2"
        app:layout_constraintStart_toEndOf="@id/gl_vertical"
        app:layout_constraintTop_toBottomOf="@+id/stock"
        app:layout_constraintBottom_toTopOf="@id/tv_quantity2"/>


    <TextView
        android:id="@+id/tv_quantity_tag2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        tools:text="@string/quantity"
        android:background="@color/shimmercolor"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/one"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintStart_toEndOf="@id/gl_vertical"/>

    <TextView
        android:id="@+id/tv_quantity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/quantity_bg"
        android:backgroundTint="@color/shimmercolor"
        android:gravity="center"
        android:fontFamily="@font/lato"
        android:textFontWeight="400"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/tv_quantity_tag2"
        app:layout_constraintBottom_toBottomOf="@id/tv_quantity_tag2"
        app:layout_constraintStart_toEndOf="@id/tv_quantity_tag2"/>

    <TextView
        android:id="@+id/tv_quantity_minus0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:background="@drawable/quantity_plus"
        android:backgroundTint="@color/shimmercolor"
        android:contentDescription="@string/quantity_minus"
        android:elevation="4dp"
        android:layout_gravity="center"
        android:paddingStart="7dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/tv_quantity2"
        app:layout_constraintStart_toEndOf="@+id/tv_quantity2"
        app:layout_constraintTop_toTopOf="@id/tv_quantity2"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_quantity_plus0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:background="@drawable/quantity_plus"
        android:backgroundTint="@color/shimmercolor"
        android:contentDescription="@string/quantity_plus"
        android:elevation="4dp"
        android:paddingStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_quantity_minus0"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical2"
        app:layout_constraintStart_toEndOf="@+id/tv_quantity_minus0"
        app:layout_constraintTop_toTopOf="@id/tv_quantity_minus0"
        tools:ignore="RtlSymmetry" />


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical2"
        app:layout_constraintStart_toEndOf="@id/gl_vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_quantity2"/>


    <TextView
        android:id="@+id/tv_product_description_tag0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        tools:text="@string/product_description_tag"
        android:background="@color/shimmercolor"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical2"
        app:layout_constraintStart_toEndOf="@id/gl_vertical"
        tools:layout_editor_absoluteY="556dp" />


    <TextView
        android:id="@+id/tv_product_description0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lato"
        tools:text="@string/product_description"
        android:textColor="@color/black"
        android:background="@color/shimmercolor"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/main"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/gl_vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_product_description_tag0"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

</androidx.constraintlayout.widget.ConstraintLayout>